--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,17 @@
 }
 
 :root {
-  background-image: url("../img/bg_001.jpg");
-  background-size: cover;
   font-family: Raleway, Arial, Helvetica, sans-serif;
   color: whitesmoke;
+}
+body {
+  background-image: url("../img/bg_001.jpg");
+  background-size: cover;
 }
 nav {
   width: 65vw;
   height: 15vh;
-  margin: 2rem 20vw 3rem 20vw;
+  margin: 2rem 20vw 0 20vw;
   padding: 6px;
 }
 
@@ -28,15 +30,15 @@ nav ul li {
 nav ul a img {
   width: 10vw;
   height: 7.5vh;
-  margin-right: 15vw;
+  margin-right: 17vw;
 }
 ul:nth-child(n) :nth-child(n + 2):nth-child(-n + 7) {
-  margin-right: 1rem;
+  margin-right: 1.25rem;
   position: relative;
   top: -1.75rem;
 }
 section {
-  margin: 1rem 20vw 3rem 20vw;
+  margin: 0 20vw 3rem 20vw;
 }
 section > div {
   display: inline-block;
@@ -53,11 +55,12 @@ div > img {
 #black {
   position: relative;
   top: 1rem;
-  left: -10rem;
+  left: -11.5rem;
 }
 #text {
   position: relative;
-  top: -8rem;
+  top: -6rem;
+  margin-right: 2rem;
 }
 div h1 {
   font-size: 2rem;
@@ -65,7 +68,28 @@ div h1 {
 }
 .links {
   color: whitesmoke;
-  font-size: 0.7rem;
+  font-size: 0.65rem;
   font-weight: bold;
   text-decoration: none;
+}
+section div p {
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-bottom: 3rem;
+}
+input {
+  text-align: center;
+  width: 9rem;
+  height: 2.5rem;
+  border: none;
+  font-weight: bolder;
+  color: whitesmoke;
+  border-radius: 0.2rem;
+}
+#More {
+  background-color: rgb(0, 163, 68);
+  margin-right: 1rem;
+}
+#App {
+  background-color: rgb(0, 116, 194);
 }
