--- a/css/style.css
+++ b/css/style.css
@@ -8,92 +8,37 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 :root {
-  font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: whitesmoke;
-}
-body {
   background-image: url("../img/bg_001.jpg");
+  background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
-/* Navigation Bar */
-nav {
-  width: 65vw;
-  height: 15vh;
-  margin: 2rem 20vw 0 20vw;
-  padding: 6px;
+/* nav bar */
+.nav {
+  display: grid;
+  grid-template-columns: 4fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  margin: 1em 8em;
 }
-nav ul li {
-  display: inline-block;
-}
-nav ul a img {
-  width: 10vw;
-  height: 7.5vh;
-  margin-right: 17vw;
-}
-ul:nth-child(n) :nth-child(n + 2):nth-child(-n + 7) {
-  margin-right: 1.25rem;
-  position: relative;
-  top: -1.75rem;
-}
-.links {
-  color: whitesmoke;
-  font-size: 0.65rem;
-  font-weight: bold;
+nav ul li,
+nav ul li a {
+  list-style: none;
   text-decoration: none;
+  color: whitesmoke;
+}
+.logo {
+  width: 10em;
+  height: auto;
 }
 /* main content */
-section {
-  margin: 0 20vw 3rem 20vw;
+.main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-section > div {
-  display: inline-block;
-  width: 28vw;
-}
-#text {
-  position: relative;
-  top: -6rem;
-  margin-right: 2rem;
-}
-div h1 {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-}
-
-section div p {
-  font-size: 0.8rem;
-  font-weight: bold;
-  margin-bottom: 3rem;
-}
-/* Images */
-div > img {
-  width: 45%;
-  height: 45%;
-}
-#white {
-  position: relative;
-  left: 6rem;
-}
-#black {
-  position: relative;
-  top: 1rem;
-  left: -11.5rem;
-}
-/* button */
-input {
-  text-align: center;
-  width: 9rem;
-  height: 2.5rem;
-  border: none;
-  font-weight: bolder;
-  color: whitesmoke;
-  border-radius: 0.2rem;
-}
-#More {
-  background-color: rgb(0, 163, 68);
-  margin-right: 1rem;
-}
-#App {
-  background-color: rgb(0, 116, 194);
+/* img phones */
+.iphone > img {
+  width: 15em;
+  height: auto;
 }
