--- a/css/style.css
+++ b/css/style.css
@@ -11,88 +11,67 @@
 
 :root {
   font-family: Raleway, Arial, Helvetica, sans-serif;
+  font-size: 16px;
   color: whitesmoke;
 }
 body {
+  width: 100vw;
+  height: 100vh;
   background-image: url("../img/bg_001.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+section {
+  border: 2px dashed gold;
+  width: 70vw;
 }
 /* Navigation Bar */
-nav {
-  width: 65vw;
-  height: 15vh;
-  margin: 2rem 20vw 0 20vw;
-  padding: 6px;
+.menu-top {
+  height: 13vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-nav ul li {
-  display: inline-block;
+.main-menu {
+  width: 35vw;
 }
-nav ul a img {
+.logo img {
   width: 10vw;
-  height: 7.5vh;
-  margin-right: 17vw;
 }
-ul:nth-child(n) :nth-child(n + 2):nth-child(-n + 7) {
-  margin-right: 1.25rem;
-  position: relative;
-  top: -1.75rem;
+.main-menu ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
 }
-.links {
-  color: whitesmoke;
-  font-size: 0.65rem;
-  font-weight: bold;
+li a {
   text-decoration: none;
-}
-/* main content */
-section {
-  margin: 0 20vw 3rem 20vw;
-}
-section > div {
-  display: inline-block;
-  width: 28vw;
-}
-#text {
-  position: relative;
-  top: -6rem;
-  margin-right: 2rem;
-}
-div h1 {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-}
-
-section div p {
+  color: whitesmoke;
   font-size: 0.8rem;
   font-weight: bold;
-  margin-bottom: 3rem;
+}
+/* main content */
+div h1 {
+  font-size: 2rem;
+}
+section div p {
+  font-weight: bold;
 }
 /* Images */
 div > img {
-  width: 45%;
-  height: 45%;
-}
-#white {
-  position: relative;
-  left: 6rem;
-}
-#black {
-  position: relative;
-  top: 1rem;
-  left: -11.5rem;
+  width: 10vw;
 }
 /* button */
 input {
-  text-align: center;
-  width: 9rem;
-  height: 2.5rem;
-  border: none;
   font-weight: bolder;
   color: whitesmoke;
-  border-radius: 0.2rem;
 }
 #More {
   background-color: rgb(0, 163, 68);
-  margin-right: 1rem;
 }
 #App {
   background-color: rgb(0, 116, 194);
