--- a/css/style.css
+++ b/css/style.css
@@ -55,24 +55,57 @@ li a {
   font-weight: bold;
 }
 /* main content */
-div h1 {
-  font-size: 2rem;
+.text,
+.iphone {
+  border: 2px dashed red;
+  height: 70vh;
+  width: 34vw;
 }
-section div p {
+.content {
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.text {
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+h1 {
+  font-size: 2.75rem;
+}
+p {
+  font-size: 0.9rem;
   font-weight: bold;
+}
+.button {
+  width: 26vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px dashed blue;
+  text-align: center;
+}
+
+/* button */
+input {
+  width: 12vw;
+  height: 6vh;
+  font-size: 1.15rem;
+  font-weight: bold;
+  color: whitesmoke;
+  border: none;
+  border-radius: 5px;
+}
+.More {
+  background-color: rgb(0, 163, 68);
+}
+.App {
+  background-color: rgb(0, 116, 194);
 }
 /* Images */
 div > img {
-  width: 10vw;
-}
-/* button */
-input {
-  font-weight: bolder;
-  color: whitesmoke;
-}
-#More {
-  background-color: rgb(0, 163, 68);
-}
-#App {
-  background-color: rgb(0, 116, 194);
+  width: 14vw;
 }
