resposive -> mobile -> menu

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,9 @@
-@media only screen and (max-width: 1024px) {
-  .main-menu ul {
-    width: 55vw;
-    height: 50vh;
-    background-color: rgb(0, 116, 194);
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    position: absolute;
-    top: 1rem;
+@media only screen and (max-width: 600px) {
+  .logo img {
+    width: 35%;
+  }
+  .iphone img {
+    width: 45%;
   }
   .hamburger {
     display: flex;
@@ -16,14 +12,35 @@
     flex-direction: column;
     width: 2rem;
     height: 2rem;
+    z-index: 1;
   }
   .hamburger div {
     width: 2rem;
     border: 1.5px solid white;
     border-radius: 4px;
   }
-}
-@media only screen and (max-width: 1024px) {
+  .main-menu {
+    display: none;
+  }
+  .main-menu ul {
+    width: 100%;
+    height: 100%;
+    background-color: #0d063a;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 0;
+    list-style: none;
+    z-index: 0;
+  }
+  .main-menu ul li a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+  }
 }
 @font-face {
   font-family: Raleway;
@@ -52,7 +69,7 @@ body {
   flex-direction: column;
 }
 section {
-  width: 55vw;
+  width: 85vw;
 }
 /* Navigation Bar */
 .menu-top {
@@ -61,6 +78,7 @@ section {
   align-items: center;
   justify-content: space-between;
 }
+/* 
 .main-menu {
   width: 28vw;
 }
@@ -79,7 +97,9 @@ li a {
   font-size: 0.8rem;
   font-weight: bold;
 }
+ */
 /* main content */
+/* 
 .text,
 .iphone {
   height: 70vh;
@@ -126,7 +146,9 @@ input {
 .App {
   background-color: rgb(0, 116, 194);
 }
+ */
 /* Images */
+/* 
 div > img {
   width: 15vw;
 }
@@ -139,4 +161,4 @@ div > img {
   position: absolute;
   top: 18%;
   right: 24%;
-}
+} */
