--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,4 @@
-@media only screen and (max-width: 600px) {
-  .logo img {
-    width: 35%;
-  }
-  .iphone img {
-    width: 45%;
-  }
-  .hamburger {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    width: 2rem;
-    height: 2rem;
-    z-index: 1;
-  }
-  .hamburger div {
-    width: 2rem;
-    border: 1.5px solid white;
-    border-radius: 4px;
-  }
-  .main-menu {
-    display: none;
-  }
-  .main-menu ul {
-    width: 100%;
-    height: 100%;
-    background-color: #0d063a;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: column;
-    position: absolute;
-    left: 0;
-    top: 0;
-    list-style: none;
-    z-index: 0;
-  }
-  .main-menu ul li a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-  }
-}
+/* main css */
 @font-face {
   font-family: Raleway;
   src: url("../fonts/Raleway-VariableFont_wght.ttf"),
@@ -59,7 +16,6 @@
 }
 body {
   width: 100vw;
-  height: 100vh;
   background-image: url("../img/bg_001.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -69,15 +25,24 @@ body {
   flex-direction: column;
 }
 section {
-  width: 85vw;
+  width: 90%;
 }
 /* Navigation Bar */
 .menu-top {
-  height: 13vh;
+  height: 20%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+/* main content */
+.content {
+  display: flex;
+  align-items: center;
+}
+.iphone {
+  display: flex;
+}
+
 /* 
 .main-menu {
   width: 28vw;
@@ -105,11 +70,7 @@ li a {
   height: 70vh;
   width: 27vw;
 }
-.content {
-  height: 70vh;
-  display: flex;
-  align-items: center;
-}
+
 .text {
   width: 28vw;
   height: 40vh;
@@ -162,3 +123,60 @@ div > img {
   top: 18%;
   right: 24%;
 } */
+@media only screen and (max-width: 600px) {
+  /* menu-top */
+  .logo img {
+    width: 35%;
+  }
+  .hamburger {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 2rem;
+    height: 2rem;
+    z-index: 1;
+  }
+  .hamburger div {
+    width: 2rem;
+    border: 1.5px solid white;
+    border-radius: 4px;
+  }
+  .main-menu {
+    display: none;
+  }
+  .main-menu ul {
+    width: 100%;
+    height: 100%;
+    background-color: #0d063a;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 0;
+    list-style: none;
+    z-index: 0;
+  }
+  .main-menu ul li a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+  }
+  /* main-content */
+  .iphone img {
+    width: 75%;
+  }
+  .content {
+    border: 3px dashed yellowgreen;
+    flex-flow: column-reverse;
+    justify-content: space-evenly;
+  }
+  .iphone {
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 2px dashed red;
+  }
+}
