--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* main css */
 @font-face {
   font-family: Raleway;
   src: url("../fonts/Raleway-VariableFont_wght.ttf"),
@@ -18,8 +17,6 @@ body {
   width: 100vw;
   background-image: url("../img/bg_001.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -27,12 +24,29 @@ body {
 section {
   width: 90%;
 }
-/* Navigation Bar */
+/* menu top */
+.logo img {
+  width: 35%;
+}
+.hamburger {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  width: 2rem;
+  height: 2rem;
+  z-index: 1;
+}
+.hamburger div {
+  width: 2rem;
+  border: 1.5px solid white;
+  border-radius: 4px;
+}
 .menu-top {
-  height: 20%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 9vh;
 }
 /* main content */
 .content {
@@ -42,106 +56,17 @@ section {
 .iphone {
   display: flex;
 }
-
-/* 
-.main-menu {
-  width: 28vw;
-}
-.logo img {
-  width: 10vw;
-}
-.main-menu ul {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  list-style: none;
-}
-li a {
-  text-decoration: none;
-  color: white;
-  font-size: 0.8rem;
-  font-weight: bold;
-}
- */
-/* main content */
-/* 
-.text,
-.iphone {
-  height: 70vh;
-  width: 27vw;
-}
-
 .text {
-  width: 28vw;
-  height: 40vh;
+  border: 2px dashed red;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
-h1 {
-  font-size: 2.4rem;
-}
-p {
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-.button {
-  width: 26vw;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  text-align: center;
+  justify-content: space-evenly;
 }
-input {
-  width: 11rem;
-  height: 3rem;
-  font-size: 1.15rem;
-  font-weight: bold;
-  color: white;
-  border: none;
-  border-radius: 5px;
-}
-.More {
-  background-color: rgb(0, 163, 68);
-}
-.App {
-  background-color: rgb(0, 116, 194);
-}
- */
-/* Images */
-/* 
-div > img {
-  width: 15vw;
-}
-.black {
-  position: absolute;
-  top: 20%;
-  right: 31%;
-}
-.white {
-  position: absolute;
-  top: 18%;
-  right: 24%;
-} */
+
 @media only screen and (max-width: 600px) {
   /* menu-top */
-  .logo img {
-    width: 35%;
-  }
-  .hamburger {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    width: 2rem;
-    height: 2rem;
-    z-index: 1;
-  }
-  .hamburger div {
-    width: 2rem;
-    border: 1.5px solid white;
-    border-radius: 4px;
-  }
+
   .main-menu {
     display: none;
   }
@@ -167,9 +92,11 @@ div > img {
   /* main-content */
   .iphone img {
     width: 75%;
+    padding: 3% 0;
   }
   .content {
     border: 3px dashed yellowgreen;
+    width: 100%;
     flex-flow: column-reverse;
     justify-content: space-evenly;
   }
@@ -177,6 +104,7 @@ div > img {
     flex-flow: column;
     align-items: center;
     justify-content: space-evenly;
-    border: 2px dashed red;
+  }
+  .text {
   }
 }
