--- a/css/style.css
+++ b/css/style.css
@@ -57,16 +57,34 @@ section {
   display: flex;
 }
 .text {
-  border: 2px dashed red;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-evenly;
 }
-
+/* button */
+input {
+  width: 45%;
+  height: 3rem;
+  font-size: 1.15rem;
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+.more {
+  background-color: #22c064;
+}
+.app {
+  background-color: #1b57ff;
+}
+.button {
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
+}
+/* resposive */
 @media only screen and (max-width: 600px) {
-  /* menu-top */
-
+  /* menu-top mobil */
   .main-menu {
     display: none;
   }
@@ -89,14 +107,14 @@ section {
     color: white;
     font-weight: bold;
   }
-  /* main-content */
+  /* main-content mobil */
   .iphone img {
     width: 75%;
     padding: 3% 0;
   }
   .content {
-    border: 3px dashed yellowgreen;
     width: 100%;
+    height: 100rem;
     flex-flow: column-reverse;
     justify-content: space-evenly;
   }
@@ -106,5 +124,8 @@ section {
     justify-content: space-evenly;
   }
   .text {
+    font-size: 1.25rem;
+    width: 90%;
+    height: 25%;
   }
 }
