--- a/css/style.css
+++ b/css/style.css
@@ -22,32 +22,34 @@ body {
   flex-direction: column;
 }
 section {
-  width: 90%;
+  width: 80%;
 }
 /* menu top */
+.menu-top {
+  padding-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .logo img {
-  width: 35%;
+  width: 40%;
 }
 .hamburger {
+  width: 30rem;
+  height: 2.5rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  width: 2rem;
-  height: 2rem;
   z-index: 1;
 }
 .hamburger div {
-  width: 2rem;
-  border: 1.5px solid white;
+  width: 2.2em;
+  height: 0.2em;
+  background-color: white;
   border-radius: 4px;
 }
-.menu-top {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 9vh;
-}
+
 /* main content */
 .content {
   display: flex;
@@ -59,12 +61,11 @@ section {
 .text {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
 }
 /* button */
 input {
-  width: 45%;
-  height: 3rem;
+  width: 10rem;
+  height: 2.5rem;
   font-size: 1.15rem;
   font-weight: bold;
   color: white;
@@ -79,8 +80,6 @@ input {
 }
 .button {
   display: flex;
-  align-content: center;
-  justify-content: space-evenly;
 }
 /* resposive */
 @media only screen and (max-width: 600px) {
@@ -88,10 +87,27 @@ input {
   .main-menu {
     display: none;
   }
+  @keyframes menuOpen {
+    0% {
+      height: 20%;
+    }
+    25% {
+      height: 40%;
+    }
+    50% {
+      height: 60%;
+    }
+    75% {
+      height: 80%;
+    }
+    100% {
+      height: 100%;
+    }
+  }
   .main-menu ul {
     width: 100%;
     height: 100%;
-    background-color: #0d063a;
+    background-color: rgb(13, 6, 58, 0.95);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -108,24 +124,30 @@ input {
     font-weight: bold;
   }
   /* main-content mobil */
+  .iphone {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
   .iphone img {
-    width: 75%;
-    padding: 3% 0;
+    width: 70%;
+    padding: 1rem 0;
   }
   .content {
     width: 100%;
-    height: 100rem;
     flex-flow: column-reverse;
-    justify-content: space-evenly;
-  }
-  .iphone {
-    flex-flow: column;
-    align-items: center;
-    justify-content: space-evenly;
   }
   .text {
-    font-size: 1.25rem;
-    width: 90%;
+    font-size: 1.35rem;
+    width: 100%;
     height: 25%;
+    align-items: center;
+  }
+  .text:nth-child(n) > :nth-child(n + 1):nth-child(-n + 3) {
+    width: 80%;
+    padding: 0.75rem 0;
+  }
+  .more {
+    margin-right: 0.5rem;
   }
 }
