--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,6 @@ section {
   width: 40%;
 }
 .hamburger {
-  width: 30rem;
-  height: 2.5rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -44,8 +42,6 @@ section {
   z-index: 1;
 }
 .hamburger div {
-  width: 2.2em;
-  height: 0.2em;
   background-color: white;
   border-radius: 4px;
 }
@@ -64,9 +60,6 @@ section {
 }
 /* button */
 input {
-  width: 10rem;
-  height: 2.5rem;
-  font-size: 1.15rem;
   font-weight: bold;
   color: white;
   border: none;
@@ -81,9 +74,12 @@ input {
 .button {
   display: flex;
 }
-/* resposive */
+/* resposive mobile */
 @media only screen and (max-width: 600px) {
   /* menu-top mobil */
+  .menu-top {
+    height: 10vh;
+  }
   .main-menu {
     display: none;
   }
@@ -150,8 +146,114 @@ input {
   .more {
     margin-right: 0.5rem;
   }
+  input {
+    width: 10rem;
+    height: 2.5rem;
+    font-size: 1.15rem;
+  }
+  .hamburger {
+    width: 30rem;
+    height: 2.5rem;
+  }
+  .hamburger div {
+    width: 2.2em;
+    height: 0.2em;
+  }
   /* animation main-content mobil */
   .hamburger div {
     transition: 0.5s;
   }
 }
+/* resposive tablet */
+@media only screen and (min-width: 600px) {
+  /* menu-top tablet */
+  .menu-top {
+    height: 10vh;
+  }
+  .main-menu {
+    display: none;
+  }
+  @keyframes menuOpen {
+    0% {
+      height: 20%;
+    }
+    25% {
+      height: 40%;
+    }
+    50% {
+      height: 60%;
+    }
+    75% {
+      height: 80%;
+    }
+    100% {
+      height: 100%;
+    }
+  }
+  .main-menu ul {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(13, 6, 58, 0.95);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 0;
+    list-style: none;
+    z-index: 0;
+  }
+  .main-menu ul li a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+  }
+  /* main-content mobil */
+  .iphone {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .iphone img {
+    width: 60%;
+    padding: 1rem 0;
+  }
+  .content {
+    width: 100%;
+    flex-flow: column;
+  }
+  .text {
+    font-size: 2.5rem;
+    width: 100%;
+    height: 25%;
+    align-items: center;
+  }
+  .text:nth-child(n) > :nth-child(n + 1):nth-child(-n + 3) {
+    width: 80%;
+    padding: 1.5rem 0;
+  }
+  input {
+    width: 18rem;
+    height: 6rem;
+    font-size: 2rem;
+  }
+  .more {
+    margin-right: 1.5rem;
+  }
+  .hamburger {
+    width: 35rem;
+    height: 5rem;
+  }
+  .hamburger div {
+    width: 4em;
+    height: 0.4em;
+  }
+
+  /* animation main-content mobil */
+  .hamburger div {
+    transition: 0.5s;
+  }
+}
+/* @media only screen and (min-width: 1024px) {} */
